--- a/README.asciidoc
+++ b/README.asciidoc
@@ -63,10 +63,8 @@ differences are:
 
 * Forms are now assigned a generated id, or can manually specify an id
   with a leading `xsltforms-id` processing instruction, for example:
-
-       `<?xsltforms-id formId ?>`
-
-  to assign an id of formId.  Ids must be unique across a given window.
+  `<?xsltforms-id formId ?>` to assign an id of formId.  Ids must be
+  unique across a given window.
 
 * The `xsltforms-options` processing instruction now accepts an
   `embedded` parameter which, when set to `yes` will target generation
