Refactored assembly to use the newer style assembly:single format, and updated README accordingly

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -13,11 +13,10 @@ consider it anything approaching stable.  It uses horrendously inefficient,
 uncompressed, full builds of dojo, until such times as we get around to cutting
 it to a compressed dojo profile, or just pull directly from the dojo CDN. The
 uncompressed build makes debugging (somewhat) easier.  Javascript is also
-currently built using the standard maven plugin, until we migrate it back into
-the agencexml CM format (need to see if they are open to a minor enhancement to
-the cm format that lets us manage dojo dependencies; then we can produce either
-an optimised single file or a multi module build, and tie into the javascript
-compressor apis).
+currently stored "raw", until we migrate it back into the agencexml CM format
+(need to see if they are open to a minor enhancement to the cm format that lets
+us manage dojo dependencies; then we can produce either an optimised single file
+or a multi module build, and tie into the javascript compressor apis).
 
 Building
 --------
@@ -28,19 +27,23 @@ http://maven.apache.org/[maven] based version which is portable, and
 relatively common (particularly in the enterprise).  After the initial
 checkout, you should run:
 
-`mvn assembly:directory -DdojoBuild=true`
+`mvn assembly:single -DdojoBuild=true`
 
 Which will download the dojo distribution and unpack it, then build xsltforms
-into `target/xsltforms-full`. Note that, as ever with maven, be prepared for
-the mother of all bootstraps the first time you run it. Once the initial dojo
-download / unpack has been performed, you can simply run:
+into `target/xsltforms-${project.version}.zip` and an equivalent `.tar.bz2`
+file.  Note that, as ever with maven, be prepared for the mother of all
+bootstraps the first time you run it. Once the initial dojo download / unpack
+has been performed, you can simply run:
 
-`mvn assembly:directory`
+`mvn assembly:single`
 
-to perform the build without the dojo steps.  To build an archive for
-distribution you can run:
+to perform the build without the dojo steps.  To build a local directory
+(instead of archive files), run:
 
-`mvn assembly:assembly`
+`mvn assembly:single -Ddirectory=true`
+
+Which will create a `target/xsltforms-${project.version}` folder with the
+same contents and structure as the archive files.
 
 Note that `mvn:clean` will only remove the downloaded dojo files if
 `-DdojoBuild=true`.
@@ -90,8 +93,7 @@ Pending Work
    archive to increase loading times.  Remove unused files (e.g. most of dojo)
    and use dojo minimal distribution.
 
-5. Get js files back into agencexml source format, switch build back to deploy
-   assemblies as main artifacts.
+5. Get js files back into agencexml source format.
 
 Items 1 and 2 are due to start next week.  5 will be based on feedback from
 Agencexml.
